Correcting z-index for error dialogues

--- a/assets/stylesheets/_error.scss
+++ b/assets/stylesheets/_error.scss
@@ -6,6 +6,7 @@ section.error {
   height: 100%;
   background-color: rgba(0,0,0,.5);
   vertical-align: middle;
+  z-index: 10;
   a.js-close {
     position: absolute;
     background-color: #fff;
